--- a/TicTacToe/Base.lproj/Main.storyboard
+++ b/TicTacToe/Base.lproj/Main.storyboard
@@ -104,6 +104,27 @@
                                 <rect key="frame" x="250" y="535" width="12" height="12"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AkT-oG-rgC">
+                                <rect key="frame" x="32" y="560" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v5W-tF-xvl">
+                                <rect key="frame" x="166" y="560" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dwU-xf-J8g">
+                                <rect key="frame" x="287" y="560" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
@@ -118,8 +139,11 @@
                         <outlet property="pieceTL" destination="pH2-hz-ZFs" id="PXw-8b-qGX"/>
                         <outlet property="pieceTR" destination="lHw-DR-ehB" id="r7g-r7-Y5e"/>
                         <outlet property="player1ActiveIndicator" destination="dnV-LP-z5K" id="rcc-lv-Vv5"/>
+                        <outlet property="player1Scorecard" destination="AkT-oG-rgC" id="XrT-Jk-LCD"/>
                         <outlet property="player2ActiveIndicator" destination="yJG-WT-6vw" id="eFb-6b-t4O"/>
+                        <outlet property="player2Scorecard" destination="dwU-xf-J8g" id="rXj-g8-odY"/>
                         <outlet property="reset" destination="LB8-rc-xRg" id="a3W-5V-fap"/>
+                        <outlet property="tiedGameScorecard" destination="v5W-tF-xvl" id="5kF-jk-5LY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
